--- a/frontend/sfpd_theft_app/package.json
+++ b/frontend/sfpd_theft_app/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
