--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,8 @@ frontend/sfpd_theft_app/public/sf_cluster_assault.geojson filter=lfs diff=lfs me
 frontend/sfpd_theft_app/public/sf_cluster_theft.geojson filter=lfs diff=lfs merge=lfs -text
 frontend/sfpd_theft_app/public/sf_cluster_mental_health.geojson filter=lfs diff=lfs merge=lfs -text
 frontend/sfpd_theft_app/public/sf_cluster_drugs.geojson filter=lfs diff=lfs merge=lfs -text
+geo_grid/sfpd_cluster.geojson filter=lfs diff=lfs merge=lfs -text
+geo_grid/sfpd_cluster_drugs.geojson filter=lfs diff=lfs merge=lfs -text
+geo_grid/sfpd_cluster_mental_health.geojson filter=lfs diff=lfs merge=lfs -text
+geo_grid/sfpd_cluster_theft.geojson filter=lfs diff=lfs merge=lfs -text
+geo_grid/sfdp_cluster_assault.geojson filter=lfs diff=lfs merge=lfs -text
