--- a/frontend/sfpd_theft_app/package.json
+++ b/frontend/sfpd_theft_app/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
+    "lucide-react": "^0.454.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
